# json-manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: ai_types.list.db.json  ai_types.list.json  ports.json  test.db.json  test.json
src/json_manager/: db_console.py  json_console.py  main.py
