[tool.poetry]
name = "json-manager"
version = "0.1.0"
description = ""
authors = ["sean <sean.li@vectorindex.cloud>"]
readme = "README.md"
packages = [{include = "json_manager", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
cmd2 = "^2.5.11"
tinydb = "^4.8.2"
requests = "^2.32.3"
thefuzz = "^0.22.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
